# ai-mlx-server

./: .gitignore  LICENSE  README.md  bench.py  cache.py  invoke.py  metrics.py  pyproject.toml  server.py  tool.py
docs/superpowers/plans/: 2026-04-07-per-model-queues.md
docs/superpowers/specs/: 2026-04-07-per-model-queues-design.md
packaging/: install-service.sh  uninstall-service.sh
packaging/homebrew/: ai-mlx-server.rb
packaging/launchd/: com.andychoi.ai-mlx-server.plist
tests/: test_cache.py  test_embed_batch.py  test_inherited_features.py  test_ollama_compat.py  test_per_model_workers.py  test_thinking.py
